[tool.poetry]
name = "heron-data-interview"
version = "0.1.0"
description = "Application to determine recurring transactions"
authors = ["s-datla"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^3.0.0"
pytest = "^7.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
